# action_gtest

./: .gitmodules  CMakeLists.txt  README.md  hello-world.cpp
.github/workflows/: ci.yaml  coverage.yaml
demo/: CMakeLists.txt
include/: add.h
test/: CMakeLists.txt  test_add.cpp  test_hello.cpp
